# Student-Pass-Fail-Predictor

./: README.md  pyproject.toml
src/: data.py  main.py  model.py  original.py  visualizer.py
tests/: test_model.py
